# WebServerCpp

./: .gitignore  CMakeLists.txt  README.md
include/: http_server.h
src/: http_server.cpp  main.cpp
web/: index.html
web/templates/: tree_template.html  upload_template.html
